--- a/doraemon.html
+++ b/doraemon.html
@@ -64,6 +64,7 @@
   </head>
 
   <body>
+    <marquee height="120%" scrollamount="2"><h1>Made by ARYAN SHARMA</h1></marquee>
     <!--  DORAEMNON STARTING -->
     <div class="outer-face">
       <!-- in the form of circle -->
